redesigned for server integration

--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-SECRET_KEY = 'shhhhh'
-REDIS_HOST = 'db'
-REDIS_PASS = 'foobar'
+SERVER_URL = 'https://inposter-service.herokuapp.com'
+SECRET_KEY = 'ed36bde116b1401b9d5615263a230de6'
