full auth0 support

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-SERVER_URL = 'https://inposter-service.herokuapp.com'
-SECRET_KEY = 'ed36bde116b1401b9d5615263a230de6'
+SERVER_URL=http://localhost:8000
+SECRET_KEY=ed36bde116b1401b9d5615263a230de6
+AUTH0_CLIENT_ID=FwG8Xhaq8sH4pkQvqrF2kXs0ck75NfxZ
+AUTH0_BASE_URL=https://inposter.eu.auth0.com
+AUTH0_CLIENT_SECRET=anfv3OMBllv4uuYCp0Dth1s8tHYgP4qrTW_uvARkcU5sghA2M1xkyajYtydQS1to
+AUTH0_CALLBACK_URL=https://in-poster.herokuapp.com/sender/auth0/callback
+AUTH0_AUDIENCE=
